added to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 *.pdf
 
+.Programming_ Principles and Pra - Bjarne Stroustrup.pdf.icloud
+PluarlFiles/.vs/PluarlFiles/v15/ipch/.adab200e9d7e869c.ipch.icloud
